Fix some issues with header elements alignment and add CSS styling to information section:background, alignment and font size/color.

--- a/style.css
+++ b/style.css
@@ -5,38 +5,45 @@ body{
     justify-content: space-between;
     font-weight: bold;
     background-color: #1F2937;
-    gap:10px;
+    height: 100vh;
+    border: solid greenyellow;
 }
 
 .header{
     display: flex;
     color: #F9FAF8;
     justify-content:space-between;
-    align-items: center;
-    max-height: 25vh;
-    padding:0 20vw;
+    align-items: stretch;
+    height: 10vh;
+    padding:0 19vw;
+    border: solid red;
+
 }
 
 .header-left{
     display: flex;
     flex-direction:column-reverse;
     justify-content: space-between;
-    align-items: center;
-    padding:5px;
+    align-items: flex-start;
     font-size: 24px;
     max-width: 25vw;
+    flex:1 1 auto;
+    border: solid salmon;
     
 }
 .header-logo{
     filter: invert(100%) sepia(94%) saturate(12%) hue-rotate(25deg) brightness(100%) contrast(97%);
     max-width: 3.5vw;
     height: auto;
-    flex: 0 6 auto;
-    margin-bottom: 6px;
+    flex: 1;
+    /*margin-bottom: 6px;*/
 }
 .header-links{
+    flex:1;
     max-width: 25vw;
     display: flex;
+    justify-content: flex-end;
+    border: solid salmon;
 
 }
 .footer{
@@ -49,7 +56,8 @@ body{
     display: flex;
     justify-content: center;
     max-height: fit-content;
-    gap:10vw;
+    gap:10vw;  
+    border: solid salmon;
 }
 .hero-left{
     max-width: 25vw;
@@ -67,6 +75,39 @@ body{
 .placeholder{
     max-width: 25vw;
     height: auto;
+}
+.image-section{
+    display:flex;
+    flex-direction: column;
+    max-height: 40vh;
+    justify-content: center;
+    align-items:center;
+    gap:20px;
+    background-color: #E5E7EB;
+    border: solid salmon;
+}
+.image-section img{
+    max-width: 5vw;
+    height: auto;
+}
+.image-title{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+.images{
+    display: flex;
+}
+.image-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 12vw;
+    gap: 10px;
+}
+#white1,#white2{
+    filter: invert(100%) sepia(94%) saturate(12%) hue-rotate(25deg) brightness(100%) contrast(97%);
 }
 ul{
     list-style: none;
